# st_sid_player

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  create_proj.py  debug.h  main.c
app/: app_context.c  app_context.h
config/: FreeRTOSConfig.h  LCDConf.h  config.h  ffconf.h
drivers/BSP/STM32746G-Discovery/: stm32746g_discovery_lcd.c  stm32746g_discovery_lcd.h
drivers/FatFs/src/: fatfs.h  ff_gen_drv.h  ffconf.h
drivers/HAL/Inc/: stm32f7xx_hal_adc.h  stm32f7xx_hal_adc_ex.h  stm32f7xx_hal_can.h  stm32f7xx_hal_cec.h  stm32f7xx_hal_conf_template.h  stm32f7xx_hal_cortex.h  stm32f7xx_hal_crc.h  stm32f7xx_hal_crc_ex.h  stm32f7xx_hal_cryp.h  stm32f7xx_hal_cryp_ex.h  stm32f7xx_hal_dac.h  stm32f7xx_hal_dac_ex.h  stm32f7xx_hal_dcmi.h  stm32f7xx_hal_def.h  stm32f7xx_hal_dfsdm.h  stm32f7xx_hal_dma.h  stm32f7xx_hal_dma2d.h  stm32f7xx_hal_dma_ex.h  stm32f7xx_hal_dsi.h  stm32f7xx_hal_eth.h  stm32f7xx_hal_flash.h  stm32f7xx_hal_flash_ex.h  stm32f7xx_hal_gpio.h  stm32f7xx_hal_gpio_ex.h  stm32f7xx_hal_hash.h  stm32f7xx_hal_hash_ex.h  stm32f7xx_hal_hcd.h  stm32f7xx_hal_i2c.h  stm32f7xx_hal_i2c_ex.h  stm32f7xx_hal_i2s.h  stm32f7xx_hal_irda.h  stm32f7xx_hal_irda_ex.h  stm32f7xx_hal_iwdg.h  stm32f7xx_hal_jpeg.h  stm32f7xx_hal_lptim.h  stm32f7xx_hal_ltdc.h  stm32f7xx_hal_ltdc_ex.h  stm32f7xx_hal_mdios.h  stm32f7xx_hal_nand.h  stm32f7xx_hal_nor.h  (+28 more)
drivers/HAL/Src/: stm32f7xx_hal.c  stm32f7xx_hal_adc.c  stm32f7xx_hal_adc_ex.c  stm32f7xx_hal_can.c  stm32f7xx_hal_cec.c  stm32f7xx_hal_cortex.c  stm32f7xx_hal_crc.c  stm32f7xx_hal_crc_ex.c  stm32f7xx_hal_cryp.c  stm32f7xx_hal_cryp_ex.c  stm32f7xx_hal_dac.c  stm32f7xx_hal_dac_ex.c  stm32f7xx_hal_dcmi.c  stm32f7xx_hal_dcmi_ex.c  stm32f7xx_hal_dfsdm.c  stm32f7xx_hal_dma.c  stm32f7xx_hal_dma2d.c  stm32f7xx_hal_dma_ex.c  stm32f7xx_hal_dsi.c  stm32f7xx_hal_eth.c  stm32f7xx_hal_flash.c  stm32f7xx_hal_flash_ex.c  stm32f7xx_hal_gpio.c  stm32f7xx_hal_hash.c  stm32f7xx_hal_hash_ex.c  stm32f7xx_hal_hcd.c  stm32f7xx_hal_i2c.c  stm32f7xx_hal_i2c_ex.c  stm32f7xx_hal_i2s.c  stm32f7xx_hal_irda.c  stm32f7xx_hal_iwdg.c  stm32f7xx_hal_jpeg.c  stm32f7xx_hal_lptim.c  stm32f7xx_hal_ltdc.c  stm32f7xx_hal_ltdc_ex.c  stm32f7xx_hal_mdios.c  stm32f7xx_hal_msp_template.c  stm32f7xx_hal_nand.c  stm32f7xx_hal_nor.c  stm32f7xx_hal_pcd.c  (+26 more)
gui/: gui.c  gui.h  touch.c  touch.h  widget.c  widget.h
gui/STemWin/OS/: GUIConf.c  GUI_X.c  (+1 more)
gui/fonts/: Segoe_UI_Semibold15.c  Segoe_UI_Semibold30.c  Segoe_UI_Semibold35.c  fonts.h
gui/icons/: Folder-26.c  Music-26.c  folder.c  generate_icons.py  music.c
gui/screens/: screen_file_list.c  screen_player.c  screens.h
gui/widgets/: widget_icon.c  widget_icon.h  widget_list.c  widget_list.h  widget_snapshot.c  widget_snapshot.h
sid/: sid.c  sid.h  sid_player.c  sid_player.h
system/: STM32F746NGHx_FLASH.ld  stm32f7xx_hal_conf.h  stm32f7xx_it.c  stm32f7xx_it.h  system.c  system.h  system_stm32f7xx.c
utils/: assert.c  assert.h  debug.h  tween.c  tween.h
utils/RTT/: SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_Conf.h  SEGGER_RTT_printf.c
(+3 files in other folders)
